<resources>
    <string name="app_name">PasswordCloudManage</string>
    <string name="app_desc">Your password management expert</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="password_ag">Password again</string>
    <string name="hint_input_account">Please input account</string>
    <string name="hint_input_password">Password</string>
    <string name="hint_input_password_reg">Password(Any character is OK)</string>
    <string name="hint_ori_password">Please input password</string>
    <string name="hint_new_password">Please input new password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget your password?</string>
    <string name="retrieve_password">Retrieve password</string>
    <string name="protection_question">Please input protection question.</string>
    <string name="answer">Answer</string>
    <string name="answer_old">Answer</string>
    <string name="set_protection">Password protection</string>
    <string name="sure">Sure</string>
    <string name="hint_old_answer">Please answer the question first</string>
    <string name="error_pw_len_error">Password length must be %1$d-%2$d</string>
    <string name="error_answer_len_error">Answer length must be %1$d-%2$d</string>
    <string name="error_account_too_short">Account is at least %1$d</string>
    <string name="error_unknown_error">Some error happened</string>
    <string name="error_account_not_exist">Account not exist</string>
    <string name="error_account_already_exist">This account has already been registered</string>
    <string name="error_account_len">Account length is not valid</string>
    <string name="error_password_len">Password length is not valid</string>
    <string name="error_password_error">Password error</string>
    <string name="error_answer_error">Your answer is error</string>
    <string name="error_no_error">success</string>
    <string name="error_unknown_error_code">Error code:%1$d</string>
    <string name="please_wait_moment">Please wait a moment</string>
    <string name="message_registering">Registering…</string>
    <string name="message_registered_password">The password you just registered is\n%1$s\n please remember this password</string>
    <string name="tip">Tips</string>
    <string name="i_see">I see</string>
    <string name="message_logging">Logging in</string>
    <string name="latter">Latter</string>
    <string name="set_protection_right_now">Set now</string>
    <string name="add">Add</string>
    <string name="message_please_set_protect">You have not set the password protection, set up after you forget the password to retrieve the password oh</string>
    <string name="message_error_account">Please input right account</string>
    <string name="message_account_not_set_protect">This account have not set protection yet</string>
    <string name="hint_getting_protection">Getting protection info…</string>
    <string name="retry">Retry</string>
    <string name="submit">Submit</string>
    <string name="failed">Failed</string>
    <string name="reset_password">Reset password</string>
    <string name="success">Success</string>
    <string name="message_reset_password_success">Password reset successfully, please keep in mind your login password\n%1$s\n</string>
    <string name="go_login">Login now</string>
    <string name="error_account_unsupport_email">Temporarily do not support the use of e-mail registration, account can not contain\"@\"</string>
    <string name="error_account_unsupport_phone">Do not use pure digital account</string>
    <string name="error_password_not_same">Passwords are not consistent</string>
    <string name="error_password_must_contain_hani">In order to improve the security, the password contains at least one full width character</string>
    <string name="error_password_is_too_simple">Do not use a password that is too simple as 111111 or 123456</string>
    <string name="error_account_is_forbidden">To ensure your data is safe, your account is temporarily disabled</string>
    <string name="error_device_is_forbidden">I am sorry that your device is temporarily disabled</string>
    <string name="message_abandon_retrieve_password">Determined to give up the reset password?</string>
    <string name="misoperation">misoperation</string>
    <string name="error_invalid_ori_password">Password error</string>
    <string name="settings">Settings</string>
    <string name="add_item">Add</string>
    <string name="edit_item">Edit</string>
    <string name="message_sure_to_logout">Sure to logout?</string>
    <string name="logout">Logout</string>
    <string name="error_no_net">Network is not connected, please check the network and try again</string>
    <string name="error_please_try_later">Unable to connect to server, please try again later</string>
    <string name="error_please_login_first">Please login first</string>
    <string name="select_type">Type</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="more">More</string>
    <string name="send">Send</string>
    <string name="warn_sure_to_send_password">Sure to send the password?</string>
    <string name="setlock">Set Pattern</string>
    <string name="pattern_error">Pattern not match</string>
    <string name="timeout">Connect server timeout</string>
    <string name="data_saved">Save success</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="new_version_found">New Version:%1$s</string>
    <string name="upgrade_later">Later</string>
    <string name="please_input_count">Please input account</string>
    <string name="operation">Operations</string>
    <string name="data_deleted">Data is deleted</string>
    <string name="checking_update">Checking new version</string>
    <string name="no_new_version_found">No new version is found</string>
    <string name="message_please_set_pattern">Set the a pattern lock to enter the program quickly, go and set now ?</string>
    <string name="submiting">Submitting…</string>
    <string name="tip_answer_error">Please answer question</string>
    <string name="wen_hao">？</string>
    <string name="pattern_unlock">Pattern unlock</string>
    <string name="modify_password">Change Password</string>
    <string name="feedback">Feedback</string>
    <string name="language">Language</string>
    <string name="app_update">App upgrade</string>
    <string name="login_success">Login success!</string>
    <string name="help">Help</string>
    <string name="warn">Warn</string>
    <string name="modify_protection">Change Protection</string>
    <string name="question_1">1.Is it save to stored private data such as passwords in the software?</string>
    <string name="answer_1">All the data of this software are encrypted by high intensity, and the key of encryption is that the password of your password has been changed. So you have to have a password to decrypt. Your password is not transmitted to the server, but to do an irreversible transformation, only to verify the effectiveness of the user. So don\'t worry about your data in the hands of our servers, do not need to worry about the data are supported on the network, to be able to use mobile phone number or email software to retrieve the password, please be used with caution, because their administrators can see your data. If you suspect that the software has malicious code, the software Android for open source code, you can contact the QQ group:605075442 to get the GitHub project address, self compiled software installation package</string>
    <string name="question_2">2.Login fail or find a bug?</string>
    <string name="answer_2">If there is a problem, or have any suggestions for improvement, please contact QQ group: 605075442</string>
    <string name="next_step">Next step</string>
    <string name="draw_new_pattern">Draw a new pattern</string>
    <string name="copy_n">Copy(%1$d)</string>
    <string name="sure_n">sure(%1$d)</string>
    <string name="download_in_background">Download background</string>
    <string name="upgrade_now_with_size">Upgrade(%.2fM)</string>
    <string name="Retry">Re download</string>
    <string name="error_net_not_safe">You are currently in an insecure network, download the file has an unsafe factor, has automatically deleted the wrong file for you, please check your network to download the update!</string>
    <string name="download_fail">Download fail</string>
    <string name="install">Install</string>
    <string name="re_download">Redownload</string>
    <string name="file_not_exist">File not exist</string>
    <string name="file_error">File error</string>
    <string name="redraw_pattern">Pattern again</string>
    <string name="verify_the_original_password">Verify password first</string>
    <string name="register_success">Register success</string>
    <string name="content_too_short">Content is at least 6 characters</string>
    <string name="feedback_has_received">We have recevived your feedback,thanks for your supporting</string>
    <string name="error_please_relogin">Invalid login information, please log in again</string>
    <string name="pattern_not_match2">Pattern not match,please redraw</string>
    <string name="pattern_verified">Pattern verified</string>
    <string name="pattern_is_set">Pattern has updated</string>
    <string name="set_pattern_is_canceled">You canceled the operation, click on the upper right corner of the plus, set in the set pattern to set</string>
    <string name="error_network_connecting">Network connection failed</string>
    <string name="message_dlg_register">All the data of this system after high intensity encryption, must use the login password to decrypt, please be sure to keep in mind your password!</string>
    <string name="error_dlg_multi_pattern_lines">The pattern can be multiple lines, you can continue to draw, or sure to use it, at least need to connect 6 points Oh</string>
    <string name="password_is_copyed">Copied</string>
    <string name="error_answer_must_contains_a_full_c">In order to improve the safety, the answer contains at least one full width character</string>
    <string name="question_too_short">Question too short</string>
    <string name="protection_is_set">Protection set success</string>
    <string name="please_verify_ori_pattern">Please verify patten first</string>
    <string name="error_password_space">Password cannot contain spaces</string>
    <string name="error_password_empty">Password is empty</string>
    <string name="error_passsword_len">Password length must be 10–30</string>
    <string name="pattern_points_too_little">You must link at least 6 points</string>
    <string name="content_too_long">Content too long</string>
    <string name="data_type">Type</string>
    <string name="delete">Delete</string>
    <string name="message_data_is_empty">Data is empty, press to add</string>
    <string name="not_set">Not Set</string>
    <string name="is_set">Set</string>
    <string name="gen_password">Password generation</string>
    <string name="lower_c">Lower case letters (a-z)</string>
    <string name="upper_c">Capital letters (A-Z)</string>
    <string name="digit_c">Digital (0–9)</string>
    <string name="symbol_c">Symbol (*?…)</string>
    <string name="generato_again">Generate</string>
    <string name="register_title">Register</string>
    <string name="gp_edit">Group Manage</string>
    <string name="item_supportus">Support us</string>
    <string name="offline_use">offline</string>
    <string name="password_tips">description</string>
    <string name="password_to_be_encrypted">Content to encrypt</string>
    <string name="second_password_to_encrypt">Second password</string>
    <string name="export">export</string>
    <string name="import_data">import</string>
</resources>