<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.pw.box.ui.widgets.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/window_padding_left"
                android:paddingRight="@dimen/window_padding_left">

                <TextView
                    style="@style/Input_TipsText"
                    android:text="@string/password_tips"/>

                <EditText
                    android:id="@+id/et_tips"
                    style="@style/Input_Text"
                    android:maxLength="128"/>

                <TextView
                    style="@style/Input_TipsText"
                    android:text="@string/password_to_be_encrypted"/>

                <EditText
                    android:id="@+id/et_content"
                    style="@style/Input_Text"
                    android:maxLength="1024"
                    android:maxLines="1000"/>

                <TextView
                    android:id="@+id/btn_gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/gen_password"/>

                <TextView
                    style="@style/Input_TipsText"
                    android:text="@string/second_password_to_encrypt"/>

                <EditText
                    android:id="@+id/et_password"
                    style="@style/Input_Text"
                    android:maxLength="128"/>

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_encrypt"
            style="@style/OkButtonWithMargin"
            android:text="@string/add"/>
    </LinearLayout>
</layout>
