<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingLeft="@dimen/window_padding_left"
              android:paddingRight="@dimen/window_padding_left"
    >

    <!--<TextView
        android:layout_width="300dp"
        android:layout_height="@dimen/title_bar_height"
        android:gravity="center_vertical"
        android:text="@string/gen_password"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size_large"/>-->

    <FrameLayout
        android:id="@+id/ad_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

    </FrameLayout>
    <!--android:background="@drawable/bg_generated_password"-->


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="4"
        android:textColor="@color/text_color_gray"
        android:textSize="@dimen/text_size_small"/>


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sw_lower"
        style="@style/Switch"
        android:text="@string/lower_c"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sw_upper"
        style="@style/Switch"
        android:text="@string/upper_c"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sw_number"
        style="@style/Switch"
        android:checked="true"
        android:text="@string/digit_c"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sw_m"
        style="@style/Switch"
        android:text="@string/symbol_c"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="128"
        android:paddingBottom="@dimen/item_vertical_margin"
        android:paddingTop="@dimen/item_vertical_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_regen"
            style="@style/OkButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/generato_again"/>

        <Button
            android:id="@+id/btn_sure"
            style="@style/OkButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:text="@string/sure"/>
    </LinearLayout>


    <View
        android:layout_width="1px"
        android:layout_height="@dimen/window_padding_top"
        />
</LinearLayout>