<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <!--<android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/titlebar_bg_color"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:title="登录"
            app:contentInsetEndWithActions="0dp"
            android:navigationIcon="@mipmap/btn_arrow_normal">

            &lt;!&ndash;<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:text="www.dastorm.com"
                android:textColor="@android:color/white"
                android:textSize="20sp"&ndash;&gt;
            android:textStyle="bold"/>
        </android.support.v7.widget.Toolbar>-->

        <com.pw.box.ui.widgets.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:leftText="@string/login"
            app:rightText="@string/wen_hao"/>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"

            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/window_padding_left"
                android:paddingRight="@dimen/window_padding_left"
                android:paddingTop="@dimen/window_padding_top">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_account"
                    style="@style/EditText"
                    android:hint="@string/hint_input_account"
                    android:maxLength="@integer/max_account_len"
                    app:met_clearButton="true"
                    app:met_floatingLabelText="@string/account"
                    app:met_maxCharacters="@integer/max_account_len"
                    app:met_minCharacters="@integer/min_account_len"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/et_password"
                    style="@style/EditTextPw"
                    android:layout_marginTop="@dimen/item_vertical_margin_half"
                    android:hint="@string/hint_input_password"
                    app:met_floatingLabelText="@string/password"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/forget_password"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1px"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/btn_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/register"/>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="@style/OkButton"
                    android:layout_marginTop="@dimen/item_vertical_margin"
                    android:text="@string/login"
                    android:textAllCaps="false"/>

                <TextView
                    android:id="@+id/btn_offline_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@null"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/offline_use"/>
            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</layout>