<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.pw.box.ui.widgets.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftText="@string/modify_password"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/window_padding_left"
            android:paddingRight="@dimen/window_padding_left"
            android:paddingTop="@dimen/window_padding_top">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_old_password"
                style="@style/EditTextPw"
                android:hint="@string/hint_ori_password"
                android:maxLength="@integer/max_password_len"
                app:met_clearButton="true"
                app:met_floatingLabelText="@string/hint_ori_password"
                app:met_maxCharacters="@integer/max_password_len"
                app:met_minCharacters="@integer/min_password_len"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_password"
                style="@style/EditTextPw"
                android:layout_marginTop="@dimen/item_vertical_margin_half"
                android:hint="@string/hint_new_password"
                android:maxLength="@integer/max_password_len"
                app:met_clearButton="true"
                app:met_floatingLabelText="@string/hint_new_password"
                app:met_maxCharacters="@integer/max_password_len"
                app:met_minCharacters="@integer/min_password_len"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_password1"
                style="@style/EditTextPw"
                android:layout_marginTop="@dimen/item_vertical_margin_half"
                android:hint="@string/password_ag"
                android:maxLength="@integer/max_password_len"
                app:met_clearButton="true"
                app:met_floatingLabelText="@string/password_ag"
                app:met_maxCharacters="@integer/max_password_len"
                app:met_minCharacters="@integer/min_password_len"/>

            <Button
                android:id="@+id/btn_register"
                style="@style/OkButton"
                android:layout_marginTop="@dimen/item_vertical_margin"
                android:text="@string/submit"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>